welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:20: error: Unit does not take parameters
            droite()();
                    ^Methods:22: error: Unit does not take parameters
            gauche()();
                    ^